ipad header alignment issue

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -2433,8 +2433,6 @@ img {
 	}
 	.navbar-default .navbar-nav > li > a {
 		white-space: nowrap;
-		line-height: 26px;
-		padding: 16px 20px;
 	}
 	.container > .navbar-header {
 		border-bottom: none;
